--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   background-color: #fff;
   box-shadow: 0 15px 15px rgba(22, 22, 22, 0.25);
@@ -21,6 +21,7 @@ body {
   transition: background-color 0.3s ease;
   overflow: hidden;
 }
+
 
 .chatbot-header {
   display: flex;
@@ -199,13 +200,9 @@ body {
 }
 
 pre {
-  background-color: #2c2c2c;
-}
-
-/* Media Queries */
-
-@media (max-width: 767px) {
-  .chatbot-container {
-    border-radius: 0;
-  }
+  background-color: #373737;
+  border-radius: 20px;
+  padding: 10px 10px;
+  overflow-wrap: break-word;
+  white-space : pre-wrap !important;
 }
